--- a/da/package.json
+++ b/da/package.json
@@ -42,6 +42,7 @@
     "axios": "^0.21.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   }
